Add IGV module again

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -51,7 +51,7 @@ process {
             enabled: params.save_reference
         ]
     }
-    // withName: 'UNTAR.*' {
+    // withName: 'UNTAR_.*' {
     withName: 'UNTAR' {
         publishDir = [
             path: { "${params.outdir}/genome/index" },
@@ -106,34 +106,45 @@ process {
 //
 // Read QC and trimming options
 //
-process {
-    withName: '.*:FASTQC_TRIMGALORE:FASTQC' {
-        ext.args = '--quiet'
+
+if (!(params.skip_fastqc || params.skip_qc)) {
+    process {
+        withName: '.*:FASTQC_TRIMGALORE:FASTQC' {
+            ext.args = '--quiet'
+        }
     }
-    withName: '.*:FASTQC_TRIMGALORE:TRIMGALORE' {
-        ext.args   = [
-            '--fastqc',
-            params.trim_nextseq > 0 ? "--nextseq ${params.trim_nextseq}" : ''
-        ].join(' ').trim()
-        publishDir = [
-            [
-                path: { "${params.outdir}/trimgalore/fastqc" },
-                mode: 'copy',
-                pattern: "*.{html,zip}"
-            ],
-            [
-                path: { "${params.outdir}/trimgalore" },
-                mode: 'copy',
-                pattern: "*.fq.gz",
-                enabled: params.save_trimmed
-            ],
-            [
-                path: { "${params.outdir}/trimgalore" },
-                mode: 'copy',
-                pattern: "*.txt"
+}
+
+if (!params.skip_trimming) {
+    process {
+        withName: '.*:FASTQC_TRIMGALORE:TRIMGALORE' {
+            ext.args   = [
+                '--fastqc',
+                params.trim_nextseq > 0 ? "--nextseq ${params.trim_nextseq}" : ''
+            ].join(' ').trim()
+            publishDir = [
+                [
+                    path: { "${params.outdir}/trimgalore/fastqc" },
+                    mode: 'copy',
+                    pattern: "*.{html,zip}"
+                ],
+                [
+                    path: { "${params.outdir}/trimgalore" },
+                    mode: 'copy',
+                    pattern: "*.fq.gz",
+                    enabled: params.save_trimmed
+                ],
+                [
+                    path: { "${params.outdir}/trimgalore" },
+                    mode: 'copy',
+                    pattern: "*.txt"
+                ]
             ]
-        ]
+        }
     }
+}
+
+process {
     withName: 'NFCORE_CHIPSEQ:CHIPSEQ:ALIGN_BWA_MEM:BAM_SORT_SAMTOOLS:SAMTOOLS_SORT' {
     // TODO: substitute by this line when multiple aligners are implemented
     // withName: 'NFCORE_CHIPSEQ:CHIPSEQ:.*:BAM_SORT_SAMTOOLS:SAMTOOLS_SORT' {
@@ -169,30 +180,6 @@ process {
             enabled: params.save_align_intermeds
         ]
     }
-    // withName: 'NFCORE_CHIPSEQ:CHIPSEQ:.*:BAM_SORT_SAMTOOLS:SAMTOOLS_INDEX' {
-    //     ext.args   = params.bam_csi_index ? '-c' : ''
-    //     publishDir = [
-    //         path: { "${params.outdir}/${params.aligner}" },
-    //         mode: 'copy',
-    //         pattern: "*.{bam,csi}",
-    //         enabled: ( ['star_salmon','hisat2'].contains(params.aligner) &&
-    //             ( params.save_align_intermeds ||
-    //                 ( !params.with_umi && params.skip_markduplicates )
-    //             )
-    //         ) || params.save_align_intermeds || params.skip_markduplicates
-    //     ]
-    // }
-    // withName: 'NFCORE_CHIPSEQ:CHIPSEQ:.*:BAM_SORT_SAMTOOLS:BAM_STATS_SAMTOOLS:.*' {
-    //     publishDir = [
-    //         path: { "${params.outdir}/${params.aligner}/samtools_stats" },
-    //         mode: 'copy',
-    //         pattern: "*.{stats,flagstat,idxstats}"
-    //     ]
-    // }
-// }
-
-// process {
-
     withName: BWA_MEM {
         ext.args   = [
                         '-M',
@@ -206,14 +193,6 @@ process {
             saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
         ]
     }
-    // withName: SAMTOOLS_SORT_LIB {
-    //     ext.prefix = { "${meta.id}.Lb.sorted" }
-    //     publishDir = [
-    //         path: { "${params.outdir}/bwa/library" },
-    //         mode: 'copy',
-    //         saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
-    //     ]
-    // }
     withName: PICARD_MERGESAMFILES {
         ext.args   = 'SORT_ORDER=coordinate VALIDATION_STRINGENCY=LENIENT TMP_DIR=tmp'
         ext.prefix = { "${meta.id}.mLb.sorted" }
@@ -223,15 +202,38 @@ process {
             saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
         ]
     }
-    // withName: PICARD_MARKDUPLICATES {
-    //     ext.args   = 'ASSUME_SORTED=true REMOVE_DUPLICATES=false VALIDATION_STRINGENCY=LENIENT TMP_DIR=tmp'
-    //     ext.prefix = { "${meta.id}.mLb.mkD.sorted" }
-    //     publishDir = [
-    //         path: { "${params.outdir}/bwa/mergedLibrary" },
-    //         mode: 'copy',
-    //         saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
-    //     ]
-    // }
+    withName: '.*:MARK_DUPLICATES_PICARD:PICARD_MARKDUPLICATES' {
+        ext.args   = 'ASSUME_SORTED=true REMOVE_DUPLICATES=false VALIDATION_STRINGENCY=LENIENT TMP_DIR=tmp'
+        ext.prefix = { "${meta.id}.mLb.mkD.sorted" }
+        publishDir = [
+            [
+                path: { "${params.outdir}/bwa/mergedLibrary" },
+                mode: 'copy',
+                pattern: '*metrics.txt'
+            ],
+            [
+                path: { "${params.outdir}/bwa/mergedLibrary" },
+                mode: 'copy',
+                pattern: '*.bam'
+            ]
+        ]
+    }
+    withName: '.*:MARK_DUPLICATES_PICARD:SAMTOOLS_INDEX' {
+        // ext.args   = params.bam_csi_index ? '-c' : '' // TODO implement it
+        ext.prefix = { "${meta.id}.mkD.sorted" }
+        publishDir = [
+            path: { "${params.outdir}/bwa/mergedLibrary" },
+            mode: 'copy',
+            pattern: '*.{bai,csi}'
+        ]
+    }
+    withName: '.*:MARK_DUPLICATES_PICARD:BAM_STATS_SAMTOOLS:.*' {
+        publishDir = [
+            path: { "${params.outdir}/bwa/samtools_stats" },
+            mode: 'copy',
+            pattern: '*.{stats,flagstat,idxstats}'
+        ]
+    }
     withName: BAM_FILTER {
         ext.prefix = { "${meta.id}.mLb.flT.sorted" }
         publishDir = [
@@ -249,8 +251,6 @@ process {
             saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
         ]
     }
-
-    // withName: SAMTOOLS_SORT_FILTER { //FILTER_BAM_BAMTOOLS //delete
     withName: 'NFCORE_CHIPSEQ:CHIPSEQ:FILTER_BAM_BAMTOOLS:BAM_SORT_SAMTOOLS:SAMTOOLS_SORT' {
         ext.prefix = { "${meta.id}.mLb.clN.sorted" }
         publishDir = [
@@ -259,7 +259,6 @@ process {
             pattern: '*.{bai,csi}'
         ]
     }
-
     withName: 'NFCORE_CHIPSEQ:CHIPSEQ:FILTER_BAM_BAMTOOLS:BAM_SORT_SAMTOOLS:SAMTOOLS_INDEX' {
         ext.prefix = { "${meta.id}.mLb.clN.sorted" }
         publishDir = [
@@ -268,7 +267,6 @@ process {
             pattern: "*.bam"
         ]
     }
-
     withName: 'NFCORE_CHIPSEQ:CHIPSEQ:FILTER_BAM_BAMTOOLS:BAM_SORT_SAMTOOLS:BAM_STATS_SAMTOOLS:.*' {
         ext.prefix = { "${meta.id}.mLb.clN.sorted" }
         publishDir = [
@@ -277,7 +275,6 @@ process {
             pattern: "*.{stats,flagstat,idxstats}"
         ]
     }
-
     withName: PICARD_COLLECTMULTIPLEMETRICS {
         ext.args   = 'VALIDATION_STRINGENCY=LENIENT TMP_DIR=tmp'
         ext.prefix = { "${meta.id}.mLb.clN.sorted" }
@@ -370,47 +367,6 @@ process {
     //         saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
     //     ]
     // }
-
-// }
-
-// if (!params.skip_alignment && !params.skip_markduplicates) {
-// process {
-    // MARK_DUPLICATES_PICARD
-    withName: '.*:MARK_DUPLICATES_PICARD:PICARD_MARKDUPLICATES' {
-        ext.args   = 'ASSUME_SORTED=true REMOVE_DUPLICATES=false VALIDATION_STRINGENCY=LENIENT TMP_DIR=tmp'
-        ext.prefix = { "${meta.id}.mLb.mkD.sorted" }
-        publishDir = [
-            [
-                path: { "${params.outdir}/bwa/mergedLibrary" },
-                mode: 'copy',
-                pattern: '*metrics.txt'
-            ],
-            [
-                path: { "${params.outdir}/bwa/mergedLibrary" },
-                mode: 'copy',
-                pattern: '*.bam'
-            ]
-        ]
-    }
-
-    withName: '.*:MARK_DUPLICATES_PICARD:SAMTOOLS_INDEX' {
-        // ext.args   = params.bam_csi_index ? '-c' : '' // TODO implement it
-        ext.prefix = { "${meta.id}.mkD.sorted" }
-        publishDir = [
-            path: { "${params.outdir}/bwa/mergedLibrary" },
-            mode: 'copy',
-            pattern: '*.{bai,csi}'
-        ]
-    }
-
-    withName: '.*:MARK_DUPLICATES_PICARD:BAM_STATS_SAMTOOLS:.*' {
-        publishDir = [
-            path: { "${params.outdir}/bwa/samtools_stats" },
-            mode: 'copy',
-            pattern: '*.{stats,flagstat,idxstats}'
-        ]
-    }
-// }
 }
 
 // here
@@ -502,7 +458,6 @@ if (params.macs_gsize) {
                 saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
             ]
         }
-
         withName: SUBREAD_FEATURECOUNTS  {
             ext.args   = '-F SAF -O --fracOverlap 0.2'
             publishDir = [
@@ -513,6 +468,21 @@ if (params.macs_gsize) {
                 mode: 'copy',
                 saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
             ]
+        }
+    }
+}
+
+if (!params.skip_igv) {
+    process {
+        withName: IGV {
+            publishDir = [
+                    path: { [
+                            "${params.outdir}/igv",
+                            params.narrow_peak? '/narrowPeak' : '/broadPeak'
+                            ].join('') },
+                    mode: 'copy',
+                    saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
+                ]
         }
     }
 }
@@ -532,152 +502,3 @@ if (!params.skip_multiqc) {
         }
     }
 }
-
-// params {
-//     modules {
-//         'gffread' {
-//             args            = '--keep-exon-attrs -F -T'
-//             publish_dir     = 'genome'
-//         }
-//         'bwa_index' {
-//             args            = "-a bwtsw"
-//             publish_dir     = "genome/index"
-//         }
-//         'fastqc' {
-//             args            = "--quiet"
-//         }
-//         'trimgalore' {
-//             args            = "--fastqc"
-//         }
-//         'bwa_mem' {
-//             args            = "-M"
-//             args2           = "-h -F 0x0100 -O BAM"
-//             publish_dir     = "bwa/library"
-//             suffix          = ".Lb"
-//         }
-//         'samtools_sort_lib' { // ALIGN_BWA_MEM
-//             publish_dir     = "bwa/library"
-//             suffix          = ".Lb.sorted"
-//         }
-//         'picard_mergesamfiles' {
-//             args            = "SORT_ORDER=coordinate VALIDATION_STRINGENCY=LENIENT TMP_DIR=tmp"
-//             publish_dir     = "bwa/mergedLibrary"
-//             suffix          = ".mLb.sorted"
-//         }
-//         'picard_markduplicates' {
-//             args            = "--ASSUME_SORTED true --REMOVE_DUPLICATES false --VALIDATION_STRINGENCY LENIENT --TMP_DIR tmp"
-//             publish_dir     = "bwa/mergedLibrary"
-//             suffix          = ".mLb.mkD.sorted"
-//         }
-//         'picard_markduplicates_samtools' { //MARK_DUPLICATES_PICARD
-//             args            = ''
-//             suffix          = ".mLb.mkD.sorted"
-//             publish_files   = ['bai':'', 'stats':'samtools_stats', 'flagstat':'samtools_stats', 'idxstats':'samtools_stats']
-//             publish_dir     = "bwa/mergedLibrary"
-//         }
-//         'bam_filter' {
-//             publish_dir     = "bwa/mergedLibrary"
-//             suffix          = ".mLb.flT.sorted"
-//         }
-//         'bam_remove_orphans' {
-//             args            = "--only_fr_pairs"
-//             publish_dir     = "bwa/mergedLibrary"
-//             suffix          = ".mLb.clN"
-//         }
-//         'samtools_sort_filter' { //FILTER_BAM_BAMTOOLS
-//             publish_dir     = "bwa/mergedLibrary"
-//             suffix          = ".mLb.clN.sorted"
-//         }
-//         'picard_collectmultiplemetrics' {
-//             args            = "VALIDATION_STRINGENCY=LENIENT TMP_DIR=tmp"
-//             publish_dir     = "bwa/mergedLibrary/picard_metrics"
-//             suffix          = ".mLb.clN.sorted"
-//         }
-//         'preseq_lcextrap' {
-//             args            = "-verbose -bam -seed 1"
-//             publish_dir     = "bwa/mergedLibrary/preseq"
-//             suffix          = ".mLb.clN"
-//         }
-//         'phantompeakqualtools' {
-//             publish_dir     = "bwa/mergedLibrary/phantompeakqualtools"
-//             suffix          = ".mLb.clN"
-//         }
-//         'multiqc_custom_phantompeakqualtools' {
-//             publish_dir     = "multiqc"
-//             publish_files   = [:]
-//         }
-//         'bedtools_genomecov' {
-//             publish_dir     = "bwa/mergedLibrary/bigwig"
-//             suffix          = ".mLb.clN"
-//         }
-//         'ucsc_bedgraphtobigwig' {
-//             publish_dir     = "bwa/mergedLibrary/bigwig"
-//             suffix          = ".mLb.clN"
-//         }
-//         'deeptools_computematrix' {
-//             args            = "scale-regions --regionBodyLength 1000 --beforeRegionStartLength 3000 --afterRegionStartLength 3000 --skipZeros --smartLabels"
-//             publish_dir     = "bwa/mergedLibrary/deeptools"
-//             suffix          = ".mLb.clN"
-//         }
-//         'deeptools_plotprofile' {
-//             publish_dir     = "bwa/mergedLibrary/deeptools"
-//             suffix          = ".mLb.clN"
-//         }
-//         'deeptools_plotheatmap' {
-//             publish_dir     = "bwa/mergedLibrary/deeptools"
-//             suffix          = ".mLb.clN"
-//         }
-//         'deeptools_plotfingerprint' {
-//             args            = "--skipZeros"
-//             publish_dir     = "bwa/mergedLibrary/deeptools"
-//             suffix          = ".mLb.clN"
-//         }
-//         'macs2_callpeak' {
-//             args            = "--keep-dup all"
-//             publish_dir     = "bwa/mergedLibrary/macs2"
-//         }
-//         'frip_score' {
-//             args            = "-bed -c -f 0.20"
-//             publish_dir     = "frip"
-//             publish_files   = [:]
-//         }
-//         'multiqc_custom_peaks' {
-//             publish_dir     = "multiqc"
-//             publish_files   = [:]
-//         }
-//         'plot_macs2_qc' {
-//             args            = "-o ./ -p macs2_peak"
-//             publish_dir     = "bwa/mergedLibrary/macs2"
-//         }
-//         'homer_annotatepeaks_macs2' {
-//             args            = "-gid"
-//             publish_dir     = "bwa/mergedLibrary/macs2"
-//             suffix          = "_peaks"
-//         }
-//         'plot_homer_annotatepeaks' {
-//             args            = "-o ./ -p macs2_annotatePeaks"
-//             publish_dir     = "bwa/mergedLibrary/macs2"
-//         }
-//         'macs2_consensus' {
-//             publish_dir     = "bwa/mergedLibrary/macs2"
-//             publish_by_id   = true
-//         }
-//         'homer_annotatepeaks_consensus' {
-//             args            = "-gid"
-//             publish_dir     = "bwa/mergedLibrary/macs2"
-//             publish_by_id   = true
-//             suffix          = ".consensus_peaks"
-//         }
-//         'subread_featurecounts' {
-//             args            = "-F SAF -O --fracOverlap 0.2"
-//             publish_dir     = "bwa/mergedLibrary/macs2"
-//         }
-//         'deseq2_featurecounts' {
-//             publish_dir     = "bwa/mergedLibrary/macs2"
-//         }
-//         'multiqc' {
-//             args            = ''
-//             publish_dir     = "multiqc"
-//         }
-//     }
-// }
