Add back skip parameters

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -275,24 +275,6 @@ process {
             pattern: "*.{stats,flagstat,idxstats}"
         ]
     }
-    withName: PICARD_COLLECTMULTIPLEMETRICS {
-        ext.args   = 'VALIDATION_STRINGENCY=LENIENT TMP_DIR=tmp'
-        ext.prefix = { "${meta.id}.mLb.clN.sorted" }
-        publishDir = [
-            path: { "${params.outdir}/bwa/mergedLibrary/picard_metrics" },
-            mode: 'copy',
-            saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
-        ]
-    }
-    withName: PRESEQ_LCEXTRAP {
-        ext.args   = '-verbose -bam -seed 1'
-        ext.prefix = { "${meta.id}.mLb.clN" }
-        publishDir = [
-            path: { "${params.outdir}/bwa/mergedLibrary/preseq" },
-            mode: 'copy',
-            saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
-        ]
-    }
     withName: PHANTOMPEAKQUALTOOLS {
         ext.prefix = { "${meta.id}.mLb.clN" }
         publishDir = [
@@ -323,53 +305,83 @@ process {
             saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
         ]
     }
-    withName: DEEPTOOLS_COMPUTEMATRIX {
-        ext.args   = 'scale-regions --regionBodyLength 1000 --beforeRegionStartLength 3000 --afterRegionStartLength 3000 --skipZeros --smartLabels'
-        ext.prefix = { "${meta.id}.mLb.clN" }
-        publishDir = [
-            path: { "${params.outdir}/bwa/mergedLibrary/deeptools" },
-            mode: 'copy',
-            saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
-        ]
-    }
-    withName: DEEPTOOLS_PLOTPROFILE {
-        ext.prefix = { "${meta.id}.mLb.clN" }
-        publishDir = [
-            path: { "${params.outdir}/bwa/mergedLibrary/deeptools" },
-            mode: 'copy',
-            saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
-        ]
-    }
-    withName: DEEPTOOLS_PLOTHEATMAP {
-        ext.prefix = { "${meta.id}.mLb.clN" }
-        publishDir = [
-            path: { "${params.outdir}/bwa/mergedLibrary/deeptools" },
-            mode: 'copy',
-            saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
-        ]
-    }
-    withName: DEEPTOOLS_PLOTFINGERPRINT {
-        ext.args   = [
-            '--skipZeros',
-            "--numberOfSamples $params.fingerprint_bins"
-        ].join(' ').trim()
-        ext.prefix = { "${meta.id}.mLb.clN" }
-        publishDir = [
-            path: { "${params.outdir}/bwa/mergedLibrary/deeptools" },
-            mode: 'copy',
-            saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
-        ]
-    }
-    // withName: DESEQ2_FEATURECOUNTS {
-    //     publishDir = [
-    //         path: { "${params.outdir}/bwa/mergedLibrary/macs2" },
-    //         mode: 'copy',
-    //         saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
-    //     ]
-    // }
 }
 
-// here
+if (!params.skip_picard_metrics) {
+    process {
+        withName: PICARD_COLLECTMULTIPLEMETRICS {
+            ext.args   = 'VALIDATION_STRINGENCY=LENIENT TMP_DIR=tmp'
+            ext.prefix = { "${meta.id}.mLb.clN.sorted" }
+            publishDir = [
+                path: { "${params.outdir}/bwa/mergedLibrary/picard_metrics" },
+                mode: 'copy',
+                saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
+            ]
+        }
+    }
+}
+
+if (!params.skip_preseq) {
+    process {
+        withName: PRESEQ_LCEXTRAP {
+            ext.args   = '-verbose -bam -seed 1'
+            ext.prefix = { "${meta.id}.mLb.clN" }
+            publishDir = [
+                path: { "${params.outdir}/bwa/mergedLibrary/preseq" },
+                mode: 'copy',
+                saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
+            ]
+        }
+    }
+}
+
+if (!params.skip_plot_profile) {
+    process {
+        withName: DEEPTOOLS_COMPUTEMATRIX {
+            ext.args   = 'scale-regions --regionBodyLength 1000 --beforeRegionStartLength 3000 --afterRegionStartLength 3000 --skipZeros --smartLabels'
+            ext.prefix = { "${meta.id}.mLb.clN" }
+            publishDir = [
+                path: { "${params.outdir}/bwa/mergedLibrary/deeptools" },
+                mode: 'copy',
+                saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
+            ]
+        }
+        withName: DEEPTOOLS_PLOTPROFILE {
+            ext.prefix = { "${meta.id}.mLb.clN" }
+            publishDir = [
+                path: { "${params.outdir}/bwa/mergedLibrary/deeptools" },
+                mode: 'copy',
+                saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
+            ]
+        }
+        withName: DEEPTOOLS_PLOTHEATMAP {
+            ext.prefix = { "${meta.id}.mLb.clN" }
+            publishDir = [
+                path: { "${params.outdir}/bwa/mergedLibrary/deeptools" },
+                mode: 'copy',
+                saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
+            ]
+        }
+    }
+}
+
+if (!params.skip_plot_fingerprint) {
+    process {
+        withName: DEEPTOOLS_PLOTFINGERPRINT {
+            ext.args   = [
+                '--skipZeros',
+                "--numberOfSamples $params.fingerprint_bins"
+            ].join(' ').trim()
+            ext.prefix = { "${meta.id}.mLb.clN" }
+            publishDir = [
+                path: { "${params.outdir}/bwa/mergedLibrary/deeptools" },
+                mode: 'copy',
+                saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
+            ]
+        }
+    }
+}
+
 if (params.macs_gsize) {
     process {
         withName: MACS2_CALLPEAK {
@@ -402,74 +414,101 @@ if (params.macs_gsize) {
                 enabled: false
             ]
         }
-        withName: PLOT_MACS2_QC {
-            ext.args   = '-o ./ -p macs2_peak'
-            publishDir = [
-                path: { [
-                        "${params.outdir}/bwa/mergedLibrary/macs2",
-                        params.narrow_peak? '/narrowPeak' : '/broadPeak'
-                        ].join('') },
-                mode: 'copy',
-                saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
-            ]
-        }
-        withName: HOMER_ANNOTATEPEAKS_MACS2 {
-            ext.args   = '-gid'
-            // ext.prefix = 'peaks'
-            publishDir = [
-                path: { [
-                        "${params.outdir}/bwa/mergedLibrary/macs2",
-                        params.narrow_peak? '/narrowPeak' : '/broadPeak'
-                        ].join('') },
-                mode: 'copy',
-                saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
-            ]
-        }
-        withName: PLOT_HOMER_ANNOTATEPEAKS {
-            ext.args   = '-o ./ -p macs2_annotatePeaks'
-            publishDir = [
-                path: { [
-                        "${params.outdir}/bwa/mergedLibrary/macs2",
-                        params.narrow_peak? '/narrowPeak' : '/broadPeak'
-                        ].join('') },
-                mode: 'copy',
-                saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
-            ]
-        }
-        withName: MACS2_CONSENSUS {
-            publishDir = [
-                path: { [
-                        "${params.outdir}/bwa/mergedLibrary/macs2",
-                        params.narrow_peak? '/narrowPeak' : '/broadPeak'
-                        ].join('') },
-                mode: 'copy',
-                saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
-            ]
-        }
-        withName: HOMER_ANNOTATEPEAKS_CONSENSUS {
-            ext.args   = '-gid'
-            ext.prefix = 'consensus_peaks'
-            publishDir = [
-                path: { [
-                        "${params.outdir}/bwa/mergedLibrary/macs2",
-                        params.narrow_peak? '/narrowPeak' : '/broadPeak'
-                        ].join('') },
-                mode: 'copy',
-                saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
-            ]
-        }
-        withName: SUBREAD_FEATURECOUNTS  {
-            ext.args   = '-F SAF -O --fracOverlap 0.2'
-            publishDir = [
-                path: { [
-                        "${params.outdir}/bwa/mergedLibrary/macs2",
-                        params.narrow_peak? '/narrowPeak' : '/broadPeak'
-                        ].join('') },
-                mode: 'copy',
-                saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
-            ]
+    }
+
+    if (!params.skip_peak_annotation && !params.skip_peak_qc) {
+        process {
+            withName: PLOT_MACS2_QC {
+                ext.args   = '-o ./ -p macs2_peak'
+                publishDir = [
+                    path: { [
+                            "${params.outdir}/bwa/mergedLibrary/macs2",
+                            params.narrow_peak? '/narrowPeak' : '/broadPeak'
+                            ].join('') },
+                    mode: 'copy',
+                    saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
+                ]
+            }
+            withName: HOMER_ANNOTATEPEAKS_MACS2 {
+                ext.args   = '-gid'
+                // ext.prefix = 'peaks'
+                publishDir = [
+                    path: { [
+                            "${params.outdir}/bwa/mergedLibrary/macs2",
+                            params.narrow_peak? '/narrowPeak' : '/broadPeak'
+                            ].join('') },
+                    mode: 'copy',
+                    saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
+                ]
+            }
+            withName: PLOT_HOMER_ANNOTATEPEAKS {
+                ext.args   = '-o ./ -p macs2_annotatePeaks'
+                publishDir = [
+                    path: { [
+                            "${params.outdir}/bwa/mergedLibrary/macs2",
+                            params.narrow_peak? '/narrowPeak' : '/broadPeak'
+                            ].join('') },
+                    mode: 'copy',
+                    saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
+                ]
+            }
         }
     }
+
+    if (!params.skip_consensus_peaks) {
+        process {
+            withName: MACS2_CONSENSUS {
+                publishDir = [
+                    path: { [
+                            "${params.outdir}/bwa/mergedLibrary/macs2",
+                            params.narrow_peak? '/narrowPeak' : '/broadPeak'
+                            ].join('') },
+                    mode: 'copy',
+                    saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
+                ]
+            }
+            withName: SUBREAD_FEATURECOUNTS  {
+                ext.args   = '-F SAF -O --fracOverlap 0.2'
+                publishDir = [
+                    path: { [
+                            "${params.outdir}/bwa/mergedLibrary/macs2",
+                            params.narrow_peak? '/narrowPeak' : '/broadPeak'
+                            ].join('') },
+                    mode: 'copy',
+                    saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
+                ]
+            }
+        }
+    }
+
+    if (!params.skip_peak_annotation) {
+        process {
+            withName: HOMER_ANNOTATEPEAKS_CONSENSUS {
+                ext.args   = '-gid'
+                ext.prefix = 'consensus_peaks'
+                publishDir = [
+                    path: { [
+                            "${params.outdir}/bwa/mergedLibrary/macs2",
+                            params.narrow_peak? '/narrowPeak' : '/broadPeak'
+                            ].join('') },
+                    mode: 'copy',
+                    saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
+                ]
+            }
+        }
+    }
+
+    // if (!params.skip_diff_analysis) {
+    //     process {
+    //         withName: DESEQ2_FEATURECOUNTS {
+    //             publishDir = [
+    //                 path: { "${params.outdir}/bwa/mergedLibrary/macs2" },
+    //                 mode: 'copy',
+    //                 saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
+    //             ]
+    //         }
+    //     }
+    // }
 }
 
 if (!params.skip_igv) {
