Add missing skip parameters

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -509,19 +509,19 @@ if (params.macs_gsize) {
     //         }
     //     }
     // }
-}
 
-if (!params.skip_igv) {
-    process {
-        withName: IGV {
-            publishDir = [
-                    path: { [
-                            "${params.outdir}/igv",
-                            params.narrow_peak? '/narrowPeak' : '/broadPeak'
-                            ].join('') },
-                    mode: 'copy',
-                    saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
+    if (!params.skip_igv) {
+        process {
+            withName: IGV {
+                publishDir = [
+                        path: { [
+                                "${params.outdir}/igv",
+                                params.narrow_peak? '/narrowPeak' : '/broadPeak'
+                                ].join('') },
+                        mode: 'copy',
+                        saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
                 ]
+            }
         }
     }
 }
@@ -531,10 +531,7 @@ if (!params.skip_multiqc) {
         withName: MULTIQC {
             ext.args   = params.multiqc_title ? "--title \"$params.multiqc_title\"" : ''
             publishDir = [
-                path: { [
-                    "${params.outdir}/bwa/mergedLibrary/macs2",
-                    params.narrow_peak? '/narrowPeak' : '/broadPeak'
-                    ].join('') },
+                path: { "${params.outdir}/multiqc" },
                 mode: 'copy',
                 saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
             ]
