Add macs_gsize to nextflow config

--- a/nextflow.config
+++ b/nextflow.config
@@ -38,6 +38,7 @@ params {
     // Options: Peaks
     narrow_peak                = false
     broad_cutoff               = 0.1
+    macs_gsize                 = null
     macs_fdr                   = null
     macs_pvalue                = null
     min_reps_consensus         = 1
