Install custom_getchromsizes module

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -85,7 +85,7 @@ process {
             enabled: params.save_reference
         ]
     }
-    withName: GET_CHROM_SIZES {
+    withName: CUSTOM_GETCHROMSIZES {
         publishDir = [
             path: { "${params.outdir}/genome" },
             mode: 'copy',
