Set macs_consensus files from modules.config

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -458,6 +458,7 @@ if (params.macs_gsize) {
     if (!params.skip_consensus_peaks) {
         process {
             withName: MACS2_CONSENSUS {
+                ext.prefix = { "${meta.id}.consensus_peaks" }
                 publishDir = [
                     path: { [
                             "${params.outdir}/bwa/mergedLibrary/macs2",
