--- a/nextflow.config
+++ b/nextflow.config
@@ -81,7 +81,7 @@ params {
     help                       = false
     validate_params            = true
     show_hidden_params         = false
-    schema_ignore_params       = 'genomes,modules'
+    schema_ignore_params       = 'genomes'
     enable_conda               = false
 
     // Config options
