Draft implementation of multiple aligner, add chromap add

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -193,6 +193,56 @@ process {
             saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
         ]
     }
+}
+
+process {
+    withName: 'NFCORE_CHIPSEQ:CHIPSEQ:ALIGN_CHROMAP:BAM_SORT_SAMTOOLS:SAMTOOLS_SORT' {
+    // TODO: substitute by this line when multiple aligners are implemented
+    // withName: 'NFCORE_CHIPSEQ:CHIPSEQ:.*:BAM_SORT_SAMTOOLS:SAMTOOLS_SORT' {
+        ext.prefix = { "${meta.id}.Lb.sorted" }
+        publishDir = [
+            path: { "${params.outdir}/chromap/library" },
+            mode: 'copy',
+            pattern: "*.bam",
+            enabled: params.save_align_intermeds
+        ]
+    }
+    withName: 'NFCORE_CHIPSEQ:CHIPSEQ:ALIGN_CHROMAP:BAM_SORT_SAMTOOLS:SAMTOOLS_INDEX' {
+    // TODO: substitute by this line when multiple aligners are implemented
+    // withName: 'NFCORE_CHIPSEQ:CHIPSEQ:.*:BAM_SORT_SAMTOOLS:SAMTOOLS_INDEX' {
+        // ext.args   = params.bam_csi_index ? '-c' : ''
+        ext.prefix = { "${meta.id}.Lb.sorted" }
+        publishDir = [
+            path: { "${params.outdir}/chromap/library" },
+            mode: 'copy',
+            pattern: '*.{bai,csi}',
+            enabled: params.save_align_intermeds
+        ]
+    }
+    withName: 'NFCORE_CHIPSEQ:CHIPSEQ:ALIGN_CHROMAP:BAM_SORT_SAMTOOLS:BAM_STATS_SAMTOOLS:.*' {
+    // TODO: substitute by this line when multiple aligners are implemented
+    // withName: 'NFCORE_CHIPSEQ:CHIPSEQ:.*:BAM_SORT_SAMTOOLS:SAMTOOLS_STATS' {
+        // ext.args   = params.bam_csi_index ? '-c' : ''
+        ext.prefix = { "${meta.id}.Lb.sorted" }
+        publishDir = [
+            path: { "${params.outdir}/chromap/library" },
+            mode: 'copy',
+            pattern: "*.{stats,flagstat,idxstats}",
+            enabled: params.save_align_intermeds
+        ]
+    }
+    withName: CHROMAP_CHROMAP {
+        ext.args   = '--preset chip'
+        ext.prefix = { "${meta.id}.Lb" }
+        publishDir = [
+            path: { "${params.outdir}/chromap/library" },
+            mode: 'copy',
+            saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
+        ]
+    }
+}
+
+process {
     withName: PICARD_MERGESAMFILES {
         ext.args   = 'SORT_ORDER=coordinate VALIDATION_STRINGENCY=LENIENT TMP_DIR=tmp'
         ext.prefix = { "${meta.id}.mLb.sorted" }
