--- a/nextflow.config
+++ b/nextflow.config
@@ -29,7 +29,8 @@ params {
     skip_trimming              = false
     save_trimmed               = false
 
-    // Options: Alignments
+    // Options: Alignment
+    aligner                    = 'bwa'
     bwa_min_score              = null
     keep_dups                  = false
     keep_multi_map             = false
